# retro-ru-tts

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_RU.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
retro_ru_tts/: __init__.py  normalizer.py
src/_ru_tts/: pyrutts.c  utterance.c
tests/: test_normalizer.py
